vendor/ocaml/testsuite/tests/letrec-disallowed/float_block.ml.reference

#           Characters 25-35:
    let rec x = [| y; y |] and y = 1. in
                ^^^^^^^^^^
Error: This kind of expression is not allowed as right-hand side of `let rec'
# 
